# Data790_PyVis

./: .gitignore  LICENSE  README.md  final.bib  final_paper.tex  load_process.py  pyproject.toml
misc/: joshua_megnauth_pset2.ipynb  pset2_covid.py
rust_dist_paper/: final.bib
src/: convmain.py  load_process.py
viz_src/: convmain.py  load_process.py
