[tool.poetry]
name = "data790_pyvis"
version = "1.0.0"
description = "Data 790 (visualization) final projects and related code."
authors = ["Joshua Megnauth"]
license = "BSD-3-Clause and CC-BY-4.0"

[tool.poetry.dependencies]
python = "^3.11"
joshnettools = { git = "https://github.com/joshuamegnauth54/GamerDistributionThesis2020.git" }
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
networkx = "^3.0.0"
numpy = "^1.24.1"
pandas = "^1.5.3"
plotly = "^5.13.0"
seaborn = "^0.12.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
